[style] Fix All input boxes are center aligned
f757d7d1a50df70024ec0b83e2d58998ad1cc6c2 introduced a bug where all
text input boxes were centered instead of just the search bar.

In order for this to work properly the global styles must be applied
before specific styles for the search bar.

--- a/static/style.css
+++ b/static/style.css
@@ -52,6 +52,18 @@ header > p.status {
 	color: red;
 }
 
+input[type="text"] {
+
+	background-color: white;
+	color: #404552;
+	border: 0px;
+	border-bottom: 2px solid #2196F3;
+	font-size: 1.1em;
+	margin-left: 8px;
+	padding-left: 4px;
+
+}
+
 .searchbar {
 
 	width: 50%;
@@ -64,12 +76,37 @@ header > p.status {
 	width: 100%;
 	margin: auto;
 	font-size: 1.4em;
+	text-align: center;
 
 }
 
 .searchbar input[type="text"]::placeholder {
 
 	text-align: center;
+
+}
+
+.searchbar input[type="text"]:focus::-webkit-input-placeholder {
+
+	opacity: 0;
+
+}
+
+.searchbar input[type="text"]:focus::-moz-placeholder {
+
+	opacity: 0;
+
+}
+
+.searchbar input[type="text"]:focus:-moz-placeholder {
+
+	opacity: 0;
+
+}
+
+.searchbar input[type="text"]:focus:-ms-input-placeholder {
+
+	opacity: 0;
 
 }
 
@@ -185,43 +222,6 @@ form {
 	width: 80%;
 	margin: auto;
 	margin-bottom: 6px;
-
-}
-
-input[type="text"] {
-
-	background-color: white;
-	color: #404552;
-	border: 0px;
-	border-bottom: 2px solid #2196F3;
-	font-size: 1.1em;
-	margin-left: 8px;
-	padding-left: 4px;
-	text-align: center;
-
-}
-
-input[type="text"]:focus::-webkit-input-placeholder {
-
-	opacity: 0;
-
-}
-
-input[type="text"]:focus::-moz-placeholder {
-
-	opacity: 0;
-
-}
-
-input[type="text"]:focus:-moz-placeholder {
-
-	opacity: 0;
-
-}
-
-input[type="text"]:focus:-ms-input-placeholder {
-
-	opacity: 0;
 
 }
 
